# fprobocon

./: frames_2024-11-04_20.53.46.gv  robot.urdf
install/: local_setup.sh  setup.sh
install/ball_detector/lib/ball_detector/: ball_detector_node
install/ball_detector/share/ball_detector/: package.sh  package.xml
install/file_handling/lib/file_handling/: file_handling_node  point_reader
install/file_handling/share/file_handling/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/joystick_controller/lib/joystick_controller/: joystick_controller_node
install/joystick_controller/share/joystick_controller/: package.sh  package.xml
install/keyboard_controller/share/keyboard_controller/: package.sh  package.xml
install/move_to_target/lib/move_to_target/: move_to_target_node  odometry
install/move_to_target/share/move_to_target/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  (+1 more)
log/: latest_build  latest_list
src/ball_detector/: setup.py
src/ball_detector/ball_detector/: ball_detector.py
src/file_handling/: CMakeLists.txt
src/file_handling/src/: file_handling_node.cpp  input.txt  odometri.cpp  point_reader.cpp
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/joystick_controller/: setup.py
src/keyboard_controller/: setup.py
src/keyboard_controller/keyboard_controller/: keyboard_controller.py
src/log/: latest_build
src/move_to_target/: CMakeLists.txt
src/move_to_target/src/: move_to_target_node.cpp  odometri.cpp
(+84 files in other folders)
